# dyntrace

./: .gitignore  CMakeLists.txt  README.md  arch.cmake  arm.cmake  dyntrace-defs.cmake  dyntrace.cmake  options.cmake  private.cmake
arch/: CMakeLists.txt  arch.hpp  x86_64.hpp
cmake/: tracer.cmake
docs/: dyntrace.md  fasttp.md  inject.md  structure.md
dyntrace/: CMakeLists.txt  config.hpp.in
dyntrace/agent/: CMakeLists.txt  main.cpp
dyntrace/comm/: CMakeLists.txt  command.hpp  handler.hpp  local.hpp  message.hpp  process.cpp  process.hpp  server.hpp
dyntrace/dyntraced/: CMakeLists.txt  command.cpp  command.hpp  main.cpp  process.cpp  process.hpp
dyntrace/frontends/cli/: .gitignore  CMakeLists.txt  dyntrace  dyntrace.py
dyntrace/loader/: CMakeLists.txt  asm.hpp  code_allocator.hpp  error.hpp  main.cpp
dyntrace/loader/arch/: asm.hpp
dyntrace/loader/arch/x86_64/: arch_src.cmake  asm.cpp  asm.hpp  code.hpp
dyntrace/proto/: command.proto  common.proto  process.proto
examples/: CMakeLists.txt  bm_tracepoint.cpp  dyntrace-start.in  foo.cpp  loop.S  loop.c  loop32.S  loop64.S  looparm.S  loopppc.S  lots.c  multithread.cpp  ptrace.cpp  recursive.cpp
ext/: CMakeLists.txt
fasttp/: CMakeLists.txt  code_allocator.cpp  code_allocator.hpp  code_ptr.hpp  common.hpp  context.cpp  context.hpp  error.hpp  fasttp.cpp  fasttp.hpp  location.cpp  location.hpp  options.hpp  reclaimer.cpp  reclaimer.hpp  tracepoint.cpp  tracepoint.hpp
fasttp/arch/: tracepoint.hpp
fasttp/arch/x86_64/: arch_src.cmake  asm.cpp  asm.hpp  atomic.S  buffer_writer.hpp  code_allocator.cpp  code_allocator.hpp  context.cpp  context.hpp  jmp.hpp  out_of_line.cpp  out_of_line.hpp  tracepoint.S  tracepoint.cpp  tracepoint.hpp  trap.cpp  trap.hpp
include/dyntrace/: tracer.hpp
include/dyntrace/arch/: arch.hpp  arm.hpp  powerpc.hpp  x86.hpp
include/dyntrace/fasttp/: code_ptr.hpp  common.hpp  context.hpp  error.hpp  fasttp.hpp  location.hpp  reclaimer.hpp
include/dyntrace/inject/: common.hpp  error.hpp  executor.hpp  inject.hpp  injector.hpp  ptrace.hpp  remote_ptr.hpp
include/dyntrace/process/: elf.hpp  error.hpp  memmap.hpp  process.hpp
include/dyntrace/util/: barrier.hpp  error.hpp  integer_range.hpp  locked.hpp  path.hpp  ptr_wrapper.hpp  refcnt.hpp  safe_queue.hpp  semaphore.hpp  util.hpp
inject/: CMakeLists.txt  auto_ptr.hpp  dl.hpp  error.hpp  injector.cpp  injector.hpp  ptrace.hpp  remote.hpp  remote_util.hpp  util.hpp
inject/arch/: dl.hpp  ptrace.hpp  target.hpp
inject/arch/x86_64/: arch_src.cmake  dl.S  dl.hpp  ptrace.S  ptrace.cpp  ptrace.hpp  remote_call.S  target.cpp  target.hpp  target64.S
process/: CMakeLists.txt  Memmap.hpp  elf.cpp  elf.hpp  error.hpp  flag.hpp  memmap.cpp  memmap.hpp  process.cpp  process.hpp  util.hpp
src/: CMakeLists.txt
src/dyntrace/: CMakeLists.txt  config.hpp.in
src/dyntrace/agent/: CMakeLists.txt  common.hpp  main.cpp  tracepoints.cpp  tracepoints.hpp  tracer.cpp  tracer.hpp
src/dyntrace/dyntraced/: CMakeLists.txt  command.cpp  command.hpp  local.hpp  main.cpp  message.hpp  process.cpp  process.hpp  server.hpp
src/dyntrace/frontends/: CMakeLists.txt  cli.py  client.py  run.py
src/dyntrace/frontends/cli/: CMakeLists.txt  dyntrace.py
src/dyntrace/frontends/dyntrace/: common.py  connection.py  debug.py  dyntrace.py  process.py
src/dyntrace/proto/: command.proto  common.proto  process.proto
src/dyntrace/tracers/: CMakeLists.txt
src/dyntrace/tracers/log/: CMakeLists.txt  log.cpp
src/dyntrace/tracers/lttng/: CMakeLists.txt  lttng.cpp  tp.cpp  tp.hpp
src/dyntrace/tracers/none/: CMakeLists.txt  none.cpp
src/fasttp/: CMakeLists.txt  buffer_writer.hpp  code_allocator.hpp  common.cpp  context.cpp  context.hpp  fasttp.cpp  location.cpp  reclaimer.cpp  reclaimer.hpp
src/fasttp/arch/: tracepoint.hpp
src/fasttp/arch/arm/: arch_src.cmake  code_allocator.hpp  context.cpp  context.hpp  out_of_line.cpp  out_of_line.hpp  tracepoint.S  tracepoint.cpp  tracepoint.hpp
src/fasttp/arch/powerpc/: arch_src.cmake  context.hpp  tracepoint.S  tracepoint.cpp  tracepoint.hpp
src/fasttp/arch/x86/: arch_src.cmake  buffer_writer.hpp  code_allocator.cpp  code_allocator.hpp  context.cpp  context.hpp  out_of_line.cpp  out_of_line.hpp  tracepoint.cpp  tracepoint.hpp  tracepoint32.S  tracepoint64.S
src/fasttp/arch/x86_64/: arch_src.cmake  buffer_writer.hpp  code_allocator.cpp  code_allocator.hpp  context.cpp  context.hpp  out_of_line.cpp  tracepoint.S  tracepoint.cpp  tracepoint.hpp
src/inject/: CMakeLists.txt  arch_executor_base.cpp  arch_executor_base.hpp  config.hpp.in  executor.cpp  inject.cpp  injector.cpp  ptrace.cpp
src/inject/arch/: executor.hpp
src/inject/arch/arm/: arch_src.cmake  executor.S  executor.cpp  executor.hpp
src/inject/arch/powerpc/: arch_src.cmake  executor.hpp
src/inject/arch/x86/: arch_src.cmake  executor.cpp  executor.hpp  executor32.S  executor64.S
src/inject/dlwrapper/: CMakeLists.txt  dlwrapper.c
src/process/: CMakeLists.txt  elf.cpp  memmap.cpp  process.cpp
src/util/: CMakeLists.txt  path.cpp  util.cpp
toolchain/: arm.cmake  powerpc.cmake
tracers/: CMakeLists.txt
tracers/lib/: CMakeLists.txt  tracer.hpp  x86_64.hpp
tracers/print/: CMakeLists.txt  print.c  print.cpp
util/: CMakeLists.txt  auto_ptr.cpp  barrier.hpp  code_ptr.hpp  error.hpp  flag.hpp  function.hpp  integer_range.hpp  locked.hpp  path.cpp  path.hpp  refcnt.hpp  util.cpp  util.hpp
